updated at: 2020-02-06 16:13, オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH

--- a/VRChat/43/1162343.html
+++ b/VRChat/43/1162343.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH
     </title>
     <meta name="description" content=
-    "VRCHAT向け　オリジナル3Dモデル　GOU -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCHATでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む） 大△21,202 polygon　小△20,818">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1162343">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH">
     <meta name="twitter:description" content=
-    "VRCHAT向け　オリジナル3Dモデル　GOU -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCHATでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む） 大△21,202 polygon　小△20,818">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/d825f9e9-65d9-440c-a2ad-2d28951389fb_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH">
     <meta property="og:description" content=
-    "VRCHAT向け　オリジナル3Dモデル　GOU -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCHATでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む） 大△21,202 polygon　小△20,818">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/d825f9e9-65d9-440c-a2ad-2d28951389fb_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1162343">
     <meta name="skip_auto_login" content="">
@@ -257,7 +257,7 @@
                           "market-item-detail-item-image-wrapper">
                             <img alt="オリジナル3Dモデル　「GOU」" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/d825f9e9-65d9-440c-a2ad-2d28951389fb_base_resized.jpg">
+                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -266,7 +266,7 @@
                             <img alt="オリジナル3Dモデル　「GOU」" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/3eadf8ad-e312-40bc-9d44-9ac1d1f6b335_base_resized.jpg">
+                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/a2b1c7de-dc27-4838-9f19-34aaaad04562_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -319,11 +319,11 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/d825f9e9-65d9-440c-a2ad-2d28951389fb_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/3eadf8ad-e312-40bc-9d44-9ac1d1f6b335_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/a2b1c7de-dc27-4838-9f19-34aaaad04562_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -350,6 +350,18 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            -----更新履歴----- 2020年2月6日
+                            法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更
+                            2019年1月3日　Ver1.0 2019年2月12日　Ver1.2
+                            　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました
+                            　一部モーフの変更、舌出しのモーフを少し変更しました
+                            　手首のウェイト変更、袖が手首に追従しないよう変更しました
+                            2019年3月2日　Ver1.3
+                            ツインテール、耳のダイナミックボーン値修正しました。
+                            2019年3月6日　Ver2.0 モデル顔部分の変更
+                            影の落ち方がおかしかった部分の修正 推奨シェーダーの設定（未同梱）
+                            prefab化しました 2019年6月18日 ローポリモデルデータ同梱
+                            2019年6月23日 ローポリ版のみ表情モーフ一点追加（修正点特になし）
                             VRCHAT向け　オリジナル3Dモデル　GOU
                             -----本モデル「GOU」について-----
                             アンドロイドの女性ボディ「GOU」です
@@ -358,10 +370,10 @@
                             胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください
                             アバター身長　150cm程度　耳先端で170cm程度 -----内容-----
                             ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類
-                            ・テクスチャデータ（改変向psd含む） 大△21,202
-                            polygon　小△20,818 polygon マテリアル数　1
-                            同梱テクスチャ数　3 ローポリモデル　△7488 polygon
-                            ※ローポリモデルに関しまして 基本的な仕様は通常版と同じになります
+                            ・テクスチャデータ（改変向psd含む） 大△14594 polygon
+                            マテリアル数　1 同梱テクスチャ数　3 ローポリモデル　△7488
+                            polygon ※ローポリモデルに関しまして
+                            基本的な仕様は通常版と同じになります
                             fbxとテクスチャデータのみの同梱となります
                             動作未確認のためオマケ程度にお考えください。
                             ※服の中は腹部周りのメッシュがありません、空洞です。
@@ -373,7 +385,7 @@
                             別途ご自身でご用意し、お好みで設定してください。
                             揺れものを全て設定するとVRCHAT上ではpoorの判定になります、Bone数が多いので揺れもの無しでGood判定です
                             ・アイトラッキング有り
-                            VRCHAT用リップシンク15種類　＋　あ　い　う　え　お
+                            VRCHAT用リップシンク15種類　＋　あ　い　う　え　お　ん
                             他表情用シェイプキー有り 眼のテクスチャは左右別れています
                             ※各リップシンクの一部や表情の一部に合成用のデータが残ったままになっています
                             使用すると表情がおかしな形になってしまうので、使用非推奨です
@@ -413,17 +425,7 @@
                             -----免責事項-----
                             ・本モデルを利用した際に発生した全てのトラブル、損失につきましては
                             製作者クロエア狐柳は一切の責任を負わないものとします。
-                            規約制定日　2019年1月3日 -----更新履歴-----
-                            2019年1月3日　Ver1.0 2019年2月12日　Ver1.2
-                            　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました
-                            　一部モーフの変更、舌出しのモーフを少し変更しました
-                            　手首のウェイト変更、袖が手首に追従しないよう変更しました
-                            2019年3月2日　Ver1.3
-                            ツインテール、耳のダイナミックボーン値修正しました。
-                            2019年3月6日　Ver2.0 モデル顔部分の変更
-                            影の落ち方がおかしかった部分の修正 推奨シェーダーの設定（未同梱）
-                            prefab化しました 2019年6月18日 ローポリモデルデータ同梱
-                            2019年6月23日 ローポリ版のみ表情モーフ一点追加（修正点特になし）
+                            規約制定日　2019年1月3日
                           </p>
                         </div>
                       </section>
