updated at: 2020-02-06 20:31, 【VRchat想定】肉球スニーカー - Δision - BOOTH

--- a/VRChat/17/1029817.html
+++ b/VRChat/17/1029817.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRchat想定】肉球スニーカー - YMD生活産業 - BOOTH
+      【VRchat想定】肉球スニーカー - Δision - BOOTH
     </title>
     <meta name="description" content="足の裏からおしゃれをしましょう。">
     <meta name="keywords" content=
@@ -12,13 +12,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRchat想定】肉球スニーカー - YMD生活産業 - BOOTH">
+    "【VRchat想定】肉球スニーカー - Δision - BOOTH">
     <meta name="twitter:description" content="足の裏からおしゃれをしましょう。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3f2dc528-011e-4c2b-9f59-a0ed9c00f0e5/i/1029817/49d59d33-676a-4075-a960-015996e80c55_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRchat想定】肉球スニーカー - YMD生活産業 - BOOTH">
+    "【VRchat想定】肉球スニーカー - Δision - BOOTH">
     <meta property="og:description" content="足の裏からおしゃれをしましょう。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3f2dc528-011e-4c2b-9f59-a0ed9c00f0e5/i/1029817/49d59d33-676a-4075-a960-015996e80c55_base_resized.jpg">
@@ -119,11 +119,11 @@
                           href="https://tamifluomutsu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="YMD生活産業" class=
+                            <img alt="Δision" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/1418434/icon_image/cde5cf12-d8a2-4430-98af-f680826d0d71_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/1418434/icon_image/2cee524b-a380-4e0c-a63d-11a24b1e68be_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              YMD生活産業
+                              Δision
                             </div>
                           </div></a>
                         </div>
@@ -272,7 +272,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1029817"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="【VRchat想定】肉球スニーカー | YMD生活産業"
+                          data-text="【VRchat想定】肉球スニーカー | Δision"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
