updated at: 2020-02-06 21:11, 【3Dモデル】櫻歌ミコぬいぐるみ - LibelalLine(KINAKODOUHU) - BOOTH

--- a/VRChat/52/1008252.html
+++ b/VRChat/52/1008252.html
@@ -6,7 +6,7 @@
       【3Dモデル】櫻歌ミコぬいぐるみ - LibelalLine(KINAKODOUHU) - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:オキナコ（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
+    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:奥菜こはる（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1008252">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【3Dモデル】櫻歌ミコぬいぐるみ - LibelalLine(KINAKODOUHU) - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:オキナコ（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
+    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:奥菜こはる（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/29407a6c-c2b7-4839-a56a-2c5c29fd9a70/i/1008252/dbbbeaf8-1cf7-4cc2-8cd8-c983ec235d78_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【3Dモデル】櫻歌ミコぬいぐるみ - LibelalLine(KINAKODOUHU) - BOOTH">
     <meta property="og:description" content=
-    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:オキナコ（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
+    "VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。 VRChatパブリックワールドに設置可能です。 ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形） モデリング:奥菜こはる（oki75) 【使用条件】 本モデルデータの使用は全て自己責任でお願いします。 著作権者の定めた利用規約を&quot;全て&quot;読んだうえで、規約に従った範囲内での使用に留めてください。 →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/ ・モデルの改変配布につきましては公式サイトの利用規約にあるガイドラインを参照してください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/29407a6c-c2b7-4839-a56a-2c5c29fd9a70/i/1008252/dbbbeaf8-1cf7-4cc2-8cd8-c983ec235d78_base_resized.jpg">
     <meta property="og:url" content=
@@ -261,7 +261,7 @@
                             VRChatでの使用を想定した Generic形式の二次創作3Dモデルです。
                             VRChatパブリックワールドに設置可能です。
                             ・三角ポリゴン数:1,395ポリゴン ・BlendShape:2種(口の形）
-                            モデリング:オキナコ（oki75) 【使用条件】
+                            モデリング:奥菜こはる（oki75) 【使用条件】
                             本モデルデータの使用は全て自己責任でお願いします。
                             著作権者の定めた利用規約を"全て"読んだうえで、規約に従った範囲内での使用に留めてください。
                             →櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/
@@ -295,7 +295,7 @@
                             ・README.txt 利用規約が記載されている.txtデータ 【関連リンク】
                             櫻歌ミコ公式サイト「みこみこうしき」 http://miko35.info/
                             【お問い合わせ】 ツイッター
-                            https://twitter.com/oki770 【免責事項】
+                            https://twitter.com/koharu86chan 【免責事項】
                             当モデルデータのご利用により、万一、ご利用者様に何らかの不都合や損害が発生したとしても、当サークルは何らの責任を負うものではありません。
                           </p>
                         </div>
