updated at: 2020-02-07 01:38, オリジナル3Dモデル 「デルフィニウム」Ver1.0 - まーまれーど・じゃむ - BOOTH

--- a/VRChat/29/1263929.html
+++ b/VRChat/29/1263929.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル 「デルフィニウム」Ver1.0 - まーまれーど・じゃむ - BOOTH
     </title>
     <meta name="description" content=
-    "※こちらの商品は、PIXIV FANBOX内で配布しているものと同一です。 ↓↓FANBOX詳細URL↓↓ https://www.pixiv.net/fanbox/creator/4285444/post/311492 ------------------------------------------------------ UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。">
+    "UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。 ------------------------------------------------------ ■同梱データ ・Delphinium_Ver1.0.UnityPackage ｜ ├Delphinium ｜｜└VRC(VRC向けモデル) ｜｜　└Anim(表情のアニメーション) ｜｜　　FBX(モデルデータ)">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1263929">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル 「デルフィニウム」Ver1.0 - まーまれーど・じゃむ - BOOTH">
     <meta name="twitter:description" content=
-    "※こちらの商品は、PIXIV FANBOX内で配布しているものと同一です。 ↓↓FANBOX詳細URL↓↓ https://www.pixiv.net/fanbox/creator/4285444/post/311492 ------------------------------------------------------ UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。">
+    "UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。 ------------------------------------------------------ ■同梱データ ・Delphinium_Ver1.0.UnityPackage ｜ ├Delphinium ｜｜└VRC(VRC向けモデル) ｜｜　└Anim(表情のアニメーション) ｜｜　　FBX(モデルデータ)">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7c84fabc-85f1-4ede-962a-54458b910b1c/i/1263929/b606b36b-a9a9-49c7-b62f-db3beeeff6fc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル 「デルフィニウム」Ver1.0 - まーまれーど・じゃむ - BOOTH">
     <meta property="og:description" content=
-    "※こちらの商品は、PIXIV FANBOX内で配布しているものと同一です。 ↓↓FANBOX詳細URL↓↓ https://www.pixiv.net/fanbox/creator/4285444/post/311492 ------------------------------------------------------ UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。">
+    "UnityのHumanoid形式に対応。 また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。 ※揺れ物にDynamicBone(有料)を使用しています。 別途UnityAssetストアでご購入ください。 ------------------------------------------------------ ■同梱データ ・Delphinium_Ver1.0.UnityPackage ｜ ├Delphinium ｜｜└VRC(VRC向けモデル) ｜｜　└Anim(表情のアニメーション) ｜｜　　FBX(モデルデータ)">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/7c84fabc-85f1-4ede-962a-54458b910b1c/i/1263929/b606b36b-a9a9-49c7-b62f-db3beeeff6fc_base_resized.jpg">
     <meta property="og:url" content=
@@ -299,10 +299,6 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ※こちらの商品は、PIXIV FANBOX内で配布しているものと同一です。
-                            ↓↓FANBOX詳細URL↓↓
-                            https://www.pixiv.net/fanbox/creator/4285444/post/311492
-                            ------------------------------------------------------
                             UnityのHumanoid形式に対応。
                             また、Unityパッケージを同梱しているので、VRChat等すぐに使用することが可能です。
                             ※揺れ物にDynamicBone(有料)を使用しています。
@@ -321,12 +317,8 @@
                             ・データの再配布 ※頒布物『オリジナル3Dモデル
                             「デルフィニウム」』を利用した時点で 利用規約に同意したものとみなされます。
                             詳細は下記よりご確認ください。
-                            利用規約についての内容は予告なく変更する場合があります。
-                            -------------------------------------
-                            《連絡先/Contact》 【Twitter】
-                            https://twitter.com/_jam_cg 【Web】
-                            http://jaaaaam.com/ 2019/03/09 Ver.1.0
-                            販売開始
+                            利用規約についての内容は予告なく変更する場合があります。 2019/03/09
+                            Ver.1.0 販売開始
                           </p>
                         </div>
                       </section>
