updated at: 2020-02-07 02:08, オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH

--- a/VRChat/47/1262147.html
+++ b/VRChat/47/1262147.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH
     </title>
     <meta name="description" content=
-    "VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 腕の部分以外は既に販売されているGOUと同一の物となります -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む）">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1262147">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH">
     <meta name="twitter:description" content=
-    "VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 腕の部分以外は既に販売されているGOUと同一の物となります -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む）">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/de9db6d1-676e-4e41-a410-f7d9b153fea0_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH">
     <meta property="og:description" content=
-    "VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください アバター身長　150cm程度　耳先端で170cm程度 腕の部分以外は既に販売されているGOUと同一の物となります -----内容----- ・UnityPackageデータ（VRC向け） ・fbxデータ　2種類 ・テクスチャデータ（改変向psd含む）">
+    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/de9db6d1-676e-4e41-a410-f7d9b153fea0_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1262147">
     <meta name="skip_auto_login" content="">
@@ -258,7 +258,17 @@
                             <img alt=
                             "オリジナル3Dモデル　「GOU NoSleeve Ver.」" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/de9db6d1-676e-4e41-a410-f7d9b153fea0_base_resized.jpg">
+                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "オリジナル3Dモデル　「GOU NoSleeve Ver.」" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/97cac44c-2954-438c-a86c-7b3f227aeae2_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -269,16 +279,6 @@
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/b7a2222a-92c0-4b69-bc0b-6a9f9537abf3_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　「GOU NoSleeve Ver.」" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/c32a5127-e93b-4823-8a4f-87abe5a8e50b_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -301,30 +301,20 @@
                             "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/d230afec-7265-47a4-b8fa-a62d239a1c3d_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　「GOU NoSleeve Ver.」" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/e3182733-b620-4d88-8fc2-96e23f1c1bf7_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/de9db6d1-676e-4e41-a410-f7d9b153fea0_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/97cac44c-2954-438c-a86c-7b3f227aeae2_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/b7a2222a-92c0-4b69-bc0b-6a9f9537abf3_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/c32a5127-e93b-4823-8a4f-87abe5a8e50b_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -333,16 +323,16 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/d230afec-7265-47a4-b8fa-a62d239a1c3d_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/e3182733-b620-4d88-8fc2-96e23f1c1bf7_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            -----更新履歴----- 2020年2月6日
+                            法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更
+                            2019年3月6日　Ver1.0
+                            2019年6月18日　ローポリモデルデータ追加
                             VRC向け　オリジナル3Dモデル　GOU 袖なし版
                             -----本モデル「GOU」について-----
                             アンドロイドの女性ボディ「GOU」です
@@ -407,9 +397,7 @@
                             -----免責事項-----
                             ・本モデルを利用した際に発生した全てのトラブル、損失につきましては
                             製作者クロエア狐柳は一切の責任を負わないものとします。
-                            規約制定日　2019年3月6日 -----更新履歴-----
-                            2019年3月6日　Ver1.0
-                            2019年6月18日　ローポリモデルデータ追加
+                            規約制定日　2019年3月6日
                           </p>
                         </div>
                       </section>
