updated at: 2020-02-07 03:31, VRCHATのほん - かぷち屋のぶーす - BOOTH

--- a/VRChat/36/1223136.html
+++ b/VRChat/36/1223136.html
@@ -6,7 +6,7 @@
       VRCHATのほん - かぷち屋のぶーす - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1223136">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRCHATのほん - かぷち屋のぶーす - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRCHATのほん - かぷち屋のぶーす - BOOTH">
     <meta property="og:description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐ 電子書籍版に高解像度版PDFを追加しました！ ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg">
     <meta property="og:url" content=
@@ -386,6 +386,8 @@
                           <p class="autolink u-text-wrap">
                             VRChatのかわいいフレンド達を描いたイラスト集を作りました!
                             みんな可愛いので是非見てくださいね。
+                            ‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐
+                            電子書籍版に高解像度版PDFを追加しました！
                             ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！
                             全18ページ PDFファイル
                           </p>
