updated at: 2020-02-07 16:29, オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH

--- a/VRChat/43/1162343.html
+++ b/VRChat/43/1162343.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH
     </title>
     <meta name="description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1162343">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH">
     <meta name="twitter:description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル　「GOU」 - aburage factory - BOOTH">
     <meta property="og:description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3 ツインテール、耳のダイナミックボーン値修正しました。 2019年3月6日　Ver2.0 モデル顔部分の変更 影の落ち方がおかしかった部分の修正">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年1月3日　Ver1.0 2019年2月12日　Ver1.2 　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました 　一部モーフの変更、舌出しのモーフを少し変更しました 　手首のウェイト変更、袖が手首に追従しないよう変更しました 2019年3月2日　Ver1.3">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1162343/06743e59-4faa-4949-9c40-df264eab4c8a_base_resized.jpg">
     <meta property="og:url" content=
@@ -350,7 +350,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            -----更新履歴----- 2020年2月6日
+                            -----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更
+                            今まで通り脚と一緒に動くように戻しました
+                            20200206のファイルは脚が貫通します 2020年2月6日
                             法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更
                             2019年1月3日　Ver1.0 2019年2月12日　Ver1.2
                             　歯のメッシュの変更、少し小さくなり口を開いたときに下の歯が見えないようにしました
@@ -362,6 +364,7 @@
                             影の落ち方がおかしかった部分の修正 推奨シェーダーの設定（未同梱）
                             prefab化しました 2019年6月18日 ローポリモデルデータ同梱
                             2019年6月23日 ローポリ版のみ表情モーフ一点追加（修正点特になし）
+                            ※旧VerがDLできますが表記と仕様が異なります
                             VRCHAT向け　オリジナル3Dモデル　GOU
                             -----本モデル「GOU」について-----
                             アンドロイドの女性ボディ「GOU」です
