updated at: 2020-02-07 19:53, いたずらメルヴィー ver1.2 - Minuet_Doll×72ca - BOOTH

--- a/VRChat/14/1041314.html
+++ b/VRChat/14/1041314.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH
+      いたずらメルヴィー ver1.2 - Minuet_Doll×72ca - BOOTH
     </title>
     <meta name="description" content=".">
     <meta name="keywords" content=
@@ -12,13 +12,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH">
+    "いたずらメルヴィー ver1.2 - Minuet_Doll×72ca - BOOTH">
     <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH">
+    "いたずらメルヴィー ver1.2 - Minuet_Doll×72ca - BOOTH">
     <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg">
@@ -130,11 +130,11 @@
                           href="https://minuetdoll.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="Minuet_Doll" class=
+                            <img alt="Minuet_Doll×72ca" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5154774/icon_image/01586bd3-121e-45aa-86e4-b23d89427b97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              Minuet_Doll
+                              Minuet_Doll×72ca
                             </div>
                           </div></a>
                         </div>
@@ -234,7 +234,7 @@
                           "https://booth.pm/ja/items/1041314"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "いたずらメルヴィー ver1.2 | Minuet_Doll"
+                          "いたずらメルヴィー ver1.2 | Minuet_Doll×72ca"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
